umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@schrodinger_Q92769_lig.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C18H20N3O3-
      atom_count: 44
      bond_count: 45
      property_count: 41
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C18H20N3O3-
      atom_count: 44
      bond_count: 45
      property_count: 41
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C18H20N3O3-
      atom_count: 44
      bond_count: 45
      extended_atoms: 0
      extended_bonds: 0
      property_count: 41
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C18H20N3O3-
      atom_count: 44
      bond_count: 45
      extended_atoms: 0
      extended_bonds: 0
      property_count: 41
      rgroup_count: 0
      sgroup_count: 0
