umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@schrodinger_eg5_01_cofactor.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C10H12N5O10P2-3
      atom_count: 39
      bond_count: 41
      property_count: 1
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C10H12N5O10P2-3
      atom_count: 39
      bond_count: 41
      property_count: 1
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C10H12N5O10P2-3
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 1
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C10H12N5O10P2-3
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 1
      rgroup_count: 0
      sgroup_count: 0
