umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@schrodinger_pde2_02_ligands.sdf.snap
---
source: umol-io/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: MissingDelimiter
    message: Missing record delimiter at line 4787
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: MissingDelimiter
    message: Missing record delimiter at line 4787
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: MissingDelimiter
    message: Missing record delimiter at line 4787
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: MissingDelimiter
    message: Missing record delimiter at line 4787
